macros/tests/sig3-fail.stderr
error: Missing `table` argument
 --> tests/sig3-fail.rs:6:11
  |
6 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |           ^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/sig3-fail.rs:6:4
  |
6 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^ incorrect number of function parameters
  |
  = note: expected fn pointer `fn(EfiHandle, SystemTable<Boot>) -> Result<_, _>`
                found fn item `fn(EfiHandle) -> Result<_, _> {e_main}`
  = note: when the arguments and return types match, functions can be coerced to function pointers

error[E0061]: this function takes 1 argument but 2 arguments were supplied
 --> tests/sig3-fail.rs:6:4
  |
5 | #[macros::entry]
  | ----------------- help: remove the extra argument
  | |
  | unexpected argument of type `SystemTable<Boot>`
6 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^
  |
note: function defined here
 --> tests/sig3-fail.rs:6:4
  |
6 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^ ------------------
